# vision-rag

./: CLAUDE.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: architecture-diagrams.jsx  system-design.md
docs/opik/: opik-prompt-versioning-explained.md  opik-setup-guide.md  opik-tracing-explained.md
scripts/: .gitignore
scripts/colpali/: README.md  colqwen3_colpali_vllm.ipynb
scripts/extract/: README.md  qwen3_vl_extract.ipynb
vision-rag/: .env.example  Dockerfile  README.md  docker-compose.yml  lmcache_config.yaml  main.py  pyproject.toml
vision-rag/monitoring/: prometheus.yml
vision-rag/proxy/: config.py  main.py  tasks.py
vision-rag/proxy/middleware/: auth.py  rate_limiter.py  request_id.py
vision-rag/proxy/models/: requests.py  responses.py
vision-rag/proxy/prompts/: CHANGELOG.md  __init__.py  prompts.py
vision-rag/proxy/routers/: extract.py  generate.py  pipeline.py  retrieve.py
vision-rag/proxy/services/: backend.py  circuit_breaker.py  embedding_index.py  health.py  ingestion.py  job_tracker.py  metadata.py  orchestrator.py  storage.py
vision-rag/scripts/: start_models.sh
vision-rag/tests/: conftest.py  test_backend.py  test_circuit_breaker.py  test_config.py  test_health.py  test_ingestion.py  test_job_tracker.py  test_middleware.py  test_models.py  test_orchestrator.py  test_prompts.py  test_rate_limiter.py  test_routers.py  test_storage.py
